<resources>
    <string name="app_name">Find Beauty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="reports">Reports</string>
    <string name="location">Location</string>
    <string name="voice_search">Voice search</string>
    <string name="dashboard">Dashboard</string>
    <string name="visitors">VISITORS</string>
    <string name="sale_amount">SALE AMOUNT</string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="customers">CUSTOMERS</string>
    <string name="appointment_status">Appointment Status</string>
    <string name="sales">Sales</string>
    <string name="today">Today</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="service_name">Service Name</string>
    <string name="aed">AED</string>
    <string name="appointments_value_aed">Appointments value: AED</string>
    <string name="_0_00">0.00</string>
    <string name="appointments1">Appointments:</string>
    <string name="_0">0</string>
    <string name="recent_sales">Recent Sales</string>
    <string name="top_services">Top Services</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="top_staff">Top Staff</string>
    <string name="amount">Amount</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="open_now">Open Now</string>
    <string name="email">Email</string>
    <string name="_0_0">0.0</string>
    <string name="unisex">Unisex</string>
    <string name="appointments_activity">Appointments Activity</string>
    <string name="upcoming_b_days">Upcoming B\'days</string>
    <string name="chart_not_available">Chart not available</string>
    <string name="connect_us">Connect us</string>
</resources>