<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.menu.MenuFragment"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <androidx.core.widget.NestedScrollView
        android:visibility="gone"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_back_black" />

                <ImageView
                    android:id="@+id/ivLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_toStartOf="@id/ivShare"
                    android:src="@drawable/ic_heart" />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_share" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civProfileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_placeholder"
                    android:elevation="1dp"
                    android:layout_margin="2dp"/>

                <ImageButton
                    android:id="@+id/ibRoute"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded_stroke_upcoming_bg"
                    android:src="@drawable/ic_location_pin" />

                <Button
                    android:id="@+id/btnBookAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/black_button_bg"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/book_appointment"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="bottom">
                <TextView
                    android:id="@+id/tvSalonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tvOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:textColor="#19C47E"
                    android:text="@string/open_now"
                    android:layout_marginStart="8dp"
                    android:textSize="11sp"
                    android:gravity="bottom"
                    android:drawablePadding="2dp"
                    app:drawableStartCompat="@drawable/ic_green_tic" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSalonAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/tvSalonRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:textColor="@color/white"
                    android:background="@drawable/rating_bg"
                    android:text="@string/_0_0"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>
                <RatingBar
                    android:id="@+id/ratingBarSalon"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:layout_marginStart="4dp"
                    android:progressTint="#EE3840"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/email_bg"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:drawablePadding="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="13sp"
                    app:drawableStartCompat="@drawable/ic_email" />
                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center_vertical"
                    android:text="@string/unisex"
                    android:textColor="@color/black"
                    android:drawablePadding="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_gender" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTopServiceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/top_services"
                android:layout_marginTop="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                app:tabMode="fixed"
                app:tabGravity="fill"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tvUpcomingAppointmentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/connect_us"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <ImageView
                    android:id="@+id/ivFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:layout_marginEnd="8dp"/>
                <ImageView
                    android:id="@+id/ivTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_twitter"
                    android:layout_marginEnd="8dp"/>
                <ImageView
                    android:id="@+id/ivLinkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_linkedin"
                    android:layout_marginEnd="8dp"/>
                <ImageView
                    android:id="@+id/ivInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_instagram"
                    android:layout_marginEnd="8dp"/>
                <ImageView
                    android:id="@+id/ivYoutube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_youtube"
                    android:layout_marginEnd="8dp"/>
                <ImageView
                    android:id="@+id/ivTiktok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tiktok"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>